Bug fix